# ChangeLog for kde-misc/krename
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/krename/ChangeLog,v 1.49 2009/06/01 18:07:43 scarabeus Exp $

*krename-3.9.3 (01 Jun 2009)

  01 Jun 2009; Tomas Chvatal <scarabeus@gentoo.org>
  -krename-3.9.2-r2.ebuild, +krename-3.9.3.ebuild:
  Version bump.

*krename-3.9.2-r2 (26 May 2009)
*krename-3.0.14-r1 (26 May 2009)

  26 May 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +krename-3.0.14-r1.ebuild, -krename-3.9.2-r1.ebuild,
  +krename-3.9.2-r2.ebuild:
  Revision bump, slot switches -> 3.5 and -> 4 from 4.1. Block only correct
  slot versions.

  06 Apr 2009; Tomas Chvatal <scarabeus@gentoo.org> krename-3.9.2-r1.ebuild:
  Preparation for new eclass. Unprefixing misc apps.

*krename-3.9.2-r1 (12 Jan 2009)

  12 Jan 2009; Tomas Chvatal <scarabeus@gentoo.org> -krename-3.9.2.ebuild,
  +krename-3.9.2-r1.ebuild:
  Update krename so it works with 4.2

*krename-3.9.2 (15 Oct 2008)

  15 Oct 2008; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +krename-3.9.2.ebuild:
  Added krename-3.9.2. Thanks to Tomáš Chvátal <tomas.chvatal@gmail.com>
  for the update.

  15 May 2007; Carsten Lohrke <carlo@gentoo.org> -krename-3.0.9.ebuild,
  -krename-3.0.11.ebuild, -krename-3.0.11-r1.ebuild, -krename-3.0.12.ebuild,
  -krename-3.0.13.ebuild:
  Clean up.

  15 May 2007; Christian Faulhammer <opfer@gentoo.org>
  krename-3.0.14.ebuild:
  stable amd64, bug 176288

  01 May 2007; Markus Rothe <corsair@gentoo.org> krename-3.0.14.ebuild:
  Stable on ppc64; bug #176228

  30 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org> krename-3.0.14.ebuild:
  Stable on sparc wrt #176288

  29 Apr 2007; Raúl Porcel <armin76@gentoo.org> krename-3.0.14.ebuild:
  x86 stable wrt #176288

  28 Apr 2007; nixnut <nixnut@gentoo.org> krename-3.0.14.ebuild:
  Stable on ppc wrt bug 176288

  09 Apr 2007; Carsten Lohrke <carlo@gentoo.org> krename-3.0.14.ebuild: