@@ -1,7 +1,6 @@
 AUX krename-3.0.14-desktop-entry-diff 255 RMD160 22f556f01152ebfe7c657504591101526e518a27 SHA1 3f4a054b9835da6fbe806261de7331dd4576cd8d SHA256 0a74b621bb396faadef1b92a3aaef1ce1c75dca5c55f70cef7c4e35a648bf208
 DIST krename-3.0.12.pdf 525778 RMD160 3fa3af24ddc6ce2d79d74858c563383400be39f2 SHA1 53d641dddf3a7c57b775632aeba885ba49b1b8ef SHA256 7c93bac59a508b8ca1e92409d0b5bf3b772bc518c1d2e0fa11d2e5a52dda4849
 DIST krename-3.0.14.tar.bz2 712821 RMD160 ba427cd1bb2746f45953122ea5dc872aaf24dfe3 SHA1 64a4a1aed5229f1b1534145ff33cfb21469ea5b9 SHA256 44b89bf2048472702a720b2318843f5f3eb2e904aec4222083b55b471f584355
-EBUILD krename-3.0.14-r1.ebuild 1471 RMD160 74356d26047aa88fe1687468bc095e62b2119a04 SHA1 238afe1b923c62a6231346bccdd91103c4912ace SHA256 130f8a24b87d9a0e94644e211b801b1e9f8fedf279ee56a669e091a3a8ac085e
-EBUILD krename-3.0.14.ebuild 1419 RMD160 57e134a79dc64cb6893f7d25e01aff32907b6b62 SHA1 037bfb869e8684e559e9303ecbeb3daaea26aea6 SHA256 6da5fa65ba5a919feda54ea9d1d778466c881c6c38e04394660fbd90b925b8a8
-MISC ChangeLog 10714 RMD160 b10c1f2b25cb739c14344fa188e6d1ee4dc669b1 SHA1 ea00540df929a5a6dcd1530ccba4ac17223eae8b SHA256 e9521dbdceec25f63ef796c77e7dbb11f50fee246da47a9167cf2c5e70966b14
+EBUILD krename-3.0.14-r1.ebuild 1466 RMD160 da6d2edefe93f851c481690535c4f51467a7bdc7 SHA1 cad75a93dc29841d6c183892cd4bbd75db011a4a SHA256 86ac1accccb482a5d633c3160709726f68fc545e2e38d8d59bb3a77fb16491b6
+MISC ChangeLog 10863 RMD160 0cdcca001e79fedce1d2a8f7ad8bcb2b4048e9d6 SHA1 c1dc9df61816eb030eca421c816c47c9853fdc0e SHA256 bbae7d1b3f8b4127cda45c4188aa968f26372dab69c54bb3d1df460aeeca4346
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
